# VitaPresence

./: .gitignore  README.md
pc/: VitaPresence.sln
pc/PresenceCommon/: CoverResolver.cs  DiscordIpcClient.cs  PresenceCommon.csproj  Utils.cs  VitaActivity.cs
pc/VitaPresence-CLI/: Program.cs  VitaPresence-CLI.csproj
pc/VitaPresence-GUI/: Config.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  Utils.cs  VitaPresence-GUI.csproj  packages.config
pc/VitaPresence-GUI/Properties/: AssemblyInfo.cs
plugin/: CMakeLists.txt
plugin/src/: main.c
